Fixed spacing and naming

--- a/src/Pages/GroupChat/GroupChat.css
+++ b/src/Pages/GroupChat/GroupChat.css
@@ -6,7 +6,7 @@
     font-size: 20px;
     overflow: hidden;
     position: relative;
-    width: 344px;
+    width: 390px;
     height: 844px;
     background-color: #ede0d4;
     display: grid;
@@ -29,7 +29,7 @@
 
 .checkbox {
     position: absolute;
-    left: 300px;
+    left: 340px;
 }
 
 #group-chat-header {
